{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 124,
  "lineage": "d65beb6f-a5a5-ef83-3f23-a5cda4870386",
  "resources": [
    {
      "module": "module.bastion",
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "force_attach": false,
                "guest_os_features": [
                  "VIRTIO_SCSI_MULTIQUEUE",
                  "SEV_CAPABLE",
                  "SEV_SNP_CAPABLE",
                  "SEV_LIVE_MIGRATABLE",
                  "SEV_LIVE_MIGRATABLE_V2",
                  "IDPF",
                  "TDX_CAPABLE",
                  "UEFI_COMPATIBLE",
                  "GVNIC"
                ],
                "initialize_params": [
                  {
                    "architecture": "X86_64",
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2404-noble-amd64-v20250606",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/devoteam-463111/zones/me-central1-a/disks/bastion-vm"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "creation_timestamp": "2025-06-16T12:54:00.818-07:00",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "enable_display": false,
            "id": "projects/devoteam-463111/zones/me-central1-a/instances/bastion-vm",
            "instance_id": "8010612999410534583",
            "label_fingerprint": "vezUS-42LLM=",
            "machine_type": "e2-medium",
            "metadata": {
              "enable-oslogin": "TRUE"
            },
            "metadata_fingerprint": "TSyJNnC5T-4=",
            "name": "bastion-vm",
            "network_interface": [
              {
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/devoteam-463111/global/networks/devo-vpc",
                "network_ip": "192.168.1.10",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/devoteam-463111/regions/me-central1/subnetworks/devo-vpc-mgmt",
                "subnetwork_project": "devoteam-463111"
              }
            ],
            "project": "devoteam-463111",
            "scheduling": [
              {
                "automatic_restart": true,
                "availability_domain": 0,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/devoteam-463111/zones/me-central1-a/instances/bastion-vm",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "bastion"
            ],
            "tags_fingerprint": "NfTTNVh6sLU=",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            },
            "zone": "me-central1-a"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ],
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_rsa"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.google_compute_network.vpc",
            "module.vpc.google_compute_subnetwork.mgmt"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_private_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "all"
              }
            ],
            "creation_timestamp": "2025-06-16T12:53:35.381-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [
              "0.0.0.0/0"
            ],
            "direction": "EGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/devoteam-463111/global/firewalls/devo-vpc-fw-private-egress",
            "log_config": [],
            "name": "devo-vpc-fw-private-egress",
            "network": "https://www.googleapis.com/compute/v1/projects/devoteam-463111/global/networks/devo-vpc",
            "priority": 1000,
            "project": "devoteam-463111",
            "self_link": "https://www.googleapis.com/compute/v1/projects/devoteam-463111/global/firewalls/devo-vpc-fw-private-egress",
            "source_ranges": [],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "private-nodes"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_ssh_iap",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-06-16T12:53:35.400-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/devoteam-463111/global/firewalls/devo-vpc-fw-ssh-iap",
            "log_config": [],
            "name": "devo-vpc-fw-ssh-iap",
            "network": "https://www.googleapis.com/compute/v1/projects/devoteam-463111/global/networks/devo-vpc",
            "priority": 1000,
            "project": "devoteam-463111",
            "self_link": "https://www.googleapis.com/compute/v1/projects/devoteam-463111/global/firewalls/devo-vpc-fw-ssh-iap",
            "source_ranges": [
              "35.235.240.0/20"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "bastion"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "bgp_always_compare_med": false,
            "bgp_best_path_selection_mode": "LEGACY",
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/devoteam-463111/global/networks/devo-vpc",
            "mtu": 0,
            "name": "devo-vpc",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "network_id": "8183494074548734150",
            "numeric_id": "8183494074548734150",
            "project": "devoteam-463111",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/devoteam-463111/global/networks/devo-vpc"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "google_compute_router",
      "name": "nat_router",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-06-16T12:53:36.668-07:00",
            "encrypted_interconnect_router": false,
            "id": "projects/devoteam-463111/regions/me-central1/routers/devo-vpc-nat-router",
            "name": "devo-vpc-nat-router",
            "network": "https://www.googleapis.com/compute/v1/projects/devoteam-463111/global/networks/devo-vpc",
            "project": "devoteam-463111",
            "region": "me-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/devoteam-463111/regions/me-central1/routers/devo-vpc-nat-router"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "google_compute_router_nat",
      "name": "nat_config",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_network_tier": "PREMIUM",
            "enable_dynamic_port_allocation": false,
            "enable_endpoint_independent_mapping": false,
            "endpoint_types": [
              "ENDPOINT_TYPE_VM"
            ],
            "icmp_idle_timeout_sec": 30,
            "id": "devoteam-463111/me-central1/devo-vpc-nat-router/devo-vpc-nat",
            "max_ports_per_vm": 0,
            "min_ports_per_vm": 0,
            "name": "devo-vpc-nat",
            "nat_ip_allocate_option": "AUTO_ONLY",
            "project": "devoteam-463111",
            "region": "me-central1",
            "router": "devo-vpc-nat-router",
            "source_subnetwork_ip_ranges_to_nat": "LIST_OF_SUBNETWORKS",
            "subnetwork": [
              {
                "name": "https://www.googleapis.com/compute/v1/projects/devoteam-463111/regions/me-central1/subnetworks/devo-vpc-private",
                "source_ip_ranges_to_nat": [
                  "ALL_IP_RANGES"
                ]
              }
            ],
            "tcp_established_idle_timeout_sec": 1200,
            "tcp_time_wait_timeout_sec": 120,
            "tcp_transitory_idle_timeout_sec": 30,
            "type": "PUBLIC",
            "udp_idle_timeout_sec": 30
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.google_compute_network.vpc",
            "module.vpc.google_compute_router.nat_router",
            "module.vpc.google_compute_subnetwork.private"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "mgmt",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-06-16T12:53:36.580-07:00",
            "enable_flow_logs": false,
            "gateway_address": "192.168.1.1",
            "id": "projects/devoteam-463111/regions/me-central1/subnetworks/devo-vpc-mgmt",
            "ip_cidr_range": "192.168.1.0/24",
            "name": "devo-vpc-mgmt",
            "network": "https://www.googleapis.com/compute/v1/projects/devoteam-463111/global/networks/devo-vpc",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "devoteam-463111",
            "purpose": "PRIVATE",
            "region": "me-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/devoteam-463111/regions/me-central1/subnetworks/devo-vpc-mgmt",
            "stack_type": "IPV4_ONLY",
            "subnetwork_id": 7606745370457917615
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-06-16T12:53:37.276-07:00",
            "enable_flow_logs": false,
            "gateway_address": "192.168.2.1",
            "id": "projects/devoteam-463111/regions/me-central1/subnetworks/devo-vpc-private",
            "ip_cidr_range": "192.168.2.0/24",
            "name": "devo-vpc-private",
            "network": "https://www.googleapis.com/compute/v1/projects/devoteam-463111/global/networks/devo-vpc",
            "private_ip_google_access": true,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "devoteam-463111",
            "purpose": "PRIVATE",
            "region": "me-central1",
            "secondary_ip_range": [
              {
                "ip_cidr_range": "192.168.8.0/22",
                "range_name": "pods"
              },
              {
                "ip_cidr_range": "192.168.4.0/24",
                "range_name": "services"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/devoteam-463111/regions/me-central1/subnetworks/devo-vpc-private",
            "stack_type": "IPV4_ONLY",
            "subnetwork_id": 4759617674562881710
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.google_compute_network.vpc"
          ]
        }
      ]
    }
  ]
}